--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "http://localhost:37088/Default",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
