--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "server=localhost;database=esperiahelp;uid=esperiahelp;password=esperiahelp;"
   },
   "Logging": {
     "LogLevel": {
